# protodisp

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.proto  main.cpp
proto/: proto_message.proto
src/: CMakeLists.txt  message_deserializer.cpp  message_deserializer.h  message_dispatcher.cpp  message_dispatcher.h  message_handler.h  message_serializer.cpp  message_serializer.h
